--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ author: Corinne Klohmann
 
 navbar-links:
   About Me: "aboutme"
-  Talks: "talks.md"
+  Talks: "talks"
   CV: /assests/cv/"Klohmann CV 12_29_19.docx"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
