--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author: Corinne Klohmann
 navbar-links:
   About Me: "aboutme"
   Talks: "talks"
-  CV: /assests/CV/"Klohmann CV 12_29_19.docx"
+  CV: "/assests/CV/Klohmann CV 12_29_19.docx"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
